--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -61,3 +61,25 @@ form a:hover {
     
     color: var(--secondary);
 }
+
+.price{
+    font-size: 30px;
+    font-weight: 400;
+    margin-left: 30px;
+}
+
+
+
+ul.custom-bullets {
+  list-style-type: none; /* Remove default bullets */
+  padding-left: 0;
+ 
+}
+
+ul.custom-bullets li {
+  background: url('/frontend/images/tick.svg') no-repeat left center;
+  background-size: 15px;
+  padding-left: 30px;
+  margin-top: 20px;
+  
+}
