--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -77,7 +77,7 @@ ul.custom-bullets {
 }
 
 ul.custom-bullets li {
-  background: url('/frontend/images/tick.svg') no-repeat left center;
+  background: url('../images/tick.svg') no-repeat left center;
   background-size: 15px;
   padding-left: 30px;
   margin-top: 20px;
