feature page updates

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,7 +1,7 @@
 :root{
     --primary: #20063d;
     --secondary: #6c2bad;
-    --secondary-hover: 
+    --secondary-hover: #d0b1ef;
 }
 
 nav, footer {
